# WassersteinWormhole

./: .pypi  .readthedocs.yaml  LICENSE  ME.md  README.md  Wormhole_Tutorial.ipynb  conf.py  pyproject.toml  readthedocs.yaml  requirements.txt
.github/workflows/: test.yaml
WassersteinWormhole/: Wormhole.py  utils_OT.py
docs/source/: conf.py  index.rst  modules.rst  wassersteinwormhole.rst
docs/source/tutorial/: Wormhole_Tutorial.ipynb
tests/: test_Wormhole.py
wassersteinwormhole/: DefaultConfig.py  SpatialWormhole.py  Wormhole.py  __init__.py  _utils_Processing.py  _utils_Transformer.py  _utils_WeightedAttention.py  utils_OT.py  utils_Transformer.py
