[tool.poetry]
name = "wassersteinwormhole"
version = "0.3.0"
description = "Transformer based embeddings for Wasserstein Distances"
authors = ["Anon"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flax = "0.8.2"
ott-jax = "0.4.6"
clu = "0.0.12"
tqdm = "^4.66.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
