[tool.poetry]
name = "wassersteinwormhole"
version = "0.3.6"
description = "Transformer based embeddings for Wasserstein Distances"
authors = ["Doron Haviv"]
license = "MIT"
readme = "README.md"



[tool.poetry.dependencies]
python = "^3.9"
flax = "^0.10.6"
ott-jax = "^0.4.9"
clu = "^0.0.12"
tqdm = "^4.67.1"
scanpy = "^1.11.2" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
